--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   "private": true,
   "dependencies": {
     "@adonisjs/ace": "^5.0.8",
-    "@adonisjs/auth": "^3.0.7",
+    "@adonisjs/antl": "^2.0.7",
+    "@adonisjs/auth": "^3.1.0",
     "@adonisjs/bodyparser": "^2.0.5",
     "@adonisjs/cors": "^1.0.7",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8"
+    "@adonisjs/shield": "^1.0.8",
+    "@material-ui/core": "^4.11.0",
+    "adonis-antl": "^1.0.5",
+    "i": "^0.3.6",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {},
   "autoload": {
